--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="darkJungleGreen">#071E22</color>
+    <color name="myrtleGreen">#1D7874</color>
+    <color name="steelTeal">#679289</color>
+    <color name="macaroniAndCheese">#F4C095</color>
+    <color name="deepCarminePink">#EE2E31</color>
 </resources>
