added BaseViewModel and binding of messageDialog and progressBar to it in BaseFragment; added EditableTextView; corrected errors handling when using coroutines

--- a/app/src/main/res/layout/view_editable_text.xml
+++ b/app/src/main/res/layout/view_editable_text.xml
@@ -26,7 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:src="@drawable/ic_edit" />
+            android:src="@drawable/ic_edit"
+            android:visibility="gone" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/save"
