--- a/app/src/main/res/layout/activity_station_info.xml
+++ b/app/src/main/res/layout/activity_station_info.xml
@@ -60,9 +60,9 @@
             android:textSize="20sp"
             app:typeface="Montserrat-SemiBold" />
 
-        <!--<com.stazis.subwaystations.presentation.views.common.EditableTextView-->
-            <!--android:id="@+id/description"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+        <com.stazis.subwaystationsmvvm.presentation.view.common.EditableTextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
