--- a/app/src/main/res/layout/activity_station_info.xml
+++ b/app/src/main/res/layout/activity_station_info.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:freezesText="true"
+            android:text="@string/latitude"
             android:textSize="16sp"
             app:typeface="Montserrat-Regular" />
 
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:freezesText="true"
+            android:text="@string/longitude"
             android:textSize="16sp"
             app:typeface="Montserrat-Regular" />
 
@@ -52,7 +54,7 @@
             app:typeface="Montserrat-Medium" />
 
         <com.stazis.subwaystationsmvvm.presentation.view.common.TextViewWithFont
-            android:id="@+id/descriptionLabel"
+            android:text="@string/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
