--- a/app/src/main/res/layout/fragment_station_info.xml
+++ b/app/src/main/res/layout/fragment_station_info.xml
@@ -9,18 +9,11 @@
     android:paddingEnd="10dp">
 
     <com.stazis.subwaystationsmvvm.presentation.view.common.TextViewWithFont
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="24sp"
-        app:typeface="Montserrat-SemiBold" />
-
-    <com.stazis.subwaystationsmvvm.presentation.view.common.TextViewWithFont
         android:id="@+id/latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:text="@string/latitude"
         android:textSize="16sp"
         app:typeface="Montserrat-Regular" />
 
@@ -29,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:text="@string/longitude"
         android:textSize="16sp"
         app:typeface="Montserrat-Regular" />
 
