implemented androidx navigation

--- a/app/src/main/res/navigation/general_navigation.xml
+++ b/app/src/main/res/navigation/general_navigation.xml
@@ -2,10 +2,21 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@+id/map_station_dest">
+    app:startDestination="@+id/home_dest">
     <fragment
-        android:id="@+id/map_station_dest"
+        android:id="@+id/home_dest"
+        android:name="com.stazis.subwaystationsmvvm.presentation.view.general.home.HomeFragment"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/station_map_dest"
         android:name="com.stazis.subwaystationsmvvm.presentation.view.general.map.StationMapFragment"
-        android:label="Station Map"
         tools:layout="@layout/fragment_station_map" />
+    <fragment
+        android:id="@+id/station_list_dest"
+        android:name="com.stazis.subwaystationsmvvm.presentation.view.general.list.StationListFragment"
+        tools:layout="@layout/fragment_station_list" />
+    <fragment
+        android:id="@+id/station_pager_dest"
+        android:name="com.stazis.subwaystationsmvvm.presentation.view.general.pager.StationPagerFragment"
+        tools:layout="@layout/fragment_station_pager" />
 </navigation>
