--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="10dp"
+    android:paddingTop="20dp"
+    android:paddingEnd="10dp">
 
-    <com.stazis.subwaystationsmvvm.presentation.view.common.TextViewWithFont
-        android:layout_width="wrap_content"
+    <com.stazis.subwaystationsmvvm.presentation.view.common.InputView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/welcome"
-        android:textSize="30sp"
-        app:typeface="Montserrat-Bold" />
-</RelativeLayout>
+        android:layout_marginBottom="10dp"
+        app:label="@string/name" />
+
+    <com.stazis.subwaystationsmvvm.presentation.view.common.InputView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        app:label="@string/description" />
+
+    <com.stazis.subwaystationsmvvm.presentation.view.common.InputView
+        android:id="@+id/message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        app:label="@string/message" />
+</LinearLayout>
