--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
     <declare-styleable name="EditTextWithFont">
         <attr name="typeface" />
     </declare-styleable>
-    <declare-styleable name="TabView">
-        <attr name="name" format="string" />
+    <declare-styleable name="InputView">
+        <attr name="label" format="string" />
     </declare-styleable>
 </resources>
