fixed a bug when ScrollView didn't fill the scope after rotation; fixed a bug when BottomNavigationBar was shown above keyboard

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="20dp">
 
         <com.stazis.subwaystationsmvvm.presentation.view.common.InputView
             android:id="@+id/name"
