converted StationInfoFragment and StationPagerFragment to Anko layouts

--- a/app/src/main/res/navigation/general_navigation.xml
+++ b/app/src/main/res/navigation/general_navigation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@+id/home_dest">
     <fragment
         android:id="@+id/home_dest"
@@ -14,6 +13,5 @@
         android:name="com.stazis.subwaystationsmvvm.presentation.view.general.list.StationListFragment" />
     <fragment
         android:id="@+id/station_pager_dest"
-        android:name="com.stazis.subwaystationsmvvm.presentation.view.general.pager.StationPagerFragment"
-        tools:layout="@layout/fragment_station_pager" />
+        android:name="com.stazis.subwaystationsmvvm.presentation.view.general.pager.StationPagerFragment" />
 </navigation>
