refactored and rethinked EditableTextView, got rid of its bugs; replaced one field containing much info by multiple fields containing less info in StationInfoViewModel

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <item name="homeFragmentScroll" type="id" />
     <item name="homeFragmentName" type="id" />
     <item name="homeFragmentDescription" type="id" />
     <item name="homeFragmentMessage" type="id" />
@@ -9,5 +10,5 @@
     <item name="stationViewPagerScrollLeft" type="id" />
     <item name="stationViewPagerScrollRight" type="id" />
     <item name="stationViewPagerPager" type="id" />
-    <item name="homeFragmentScroll" type="id" />
+    <item name="stationInfoActivityDescription" type="id"/>
 </resources>
