added freezingTextView, fixed bug in EditableTextView when text was replaced by default after rotation

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -11,4 +11,5 @@
     <item name="stationViewPagerScrollRight" type="id" />
     <item name="stationViewPagerPager" type="id" />
     <item name="stationInfoActivityDescription" type="id"/>
+    <item name="editableTextViewText" type="id" />
 </resources>
